remove weird styling, and a div

--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -140,7 +140,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 </select>
       <input type="submit" value="Subscribe">
  </form> 
-    <kbd><p style="color:red">Your PokeCrates are typically shipped out the second week of every month.  PokeCrates will sometimes feature shirts so we will save your shirt size so we can ship accordingly.</p></kbd>
+    <p style="color:red">Your PokeCrates are typically shipped out the second week of every month.  PokeCrates will sometimes feature shirts so we will save your shirt size so we can ship accordingly.</p>
  </center>
 
     <foot>
@@ -150,7 +150,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
                 <h2>Custom Shirts</h2>
                 <p>Every so often our PokeCrates will contain custom made Pokémon shirts.  Our awesome shirts are drawn out by a fellow Pokémon fan just like you.  Once we have your shirt size it will be saved on file for your next shirts. Follow us on <a href="http://twitter.com/pokecrate">Twitter</a> and <a href="https://www.facebook.com/PokeCrate">Facebook</a> for contest and more! Winners will have their design featured in one of our shirts! </p>
 
-            </div>
+            
             <!--<div class="col-lg-4 ">-->
                 <h2>Guaranteed Plush</h2>
                 <p>One may wonder what will be in our next Pokecrate.. but one thing it will have for sure is a Pokémon plush toy.  We thought you guys would enjoy these because we sure do.  They are perfect for decorating your room, office, car, and many other things.  We have seen people be very creative.  These plushes will range from size and quality, but will all be cute and stuff.  One in every Pokecrate, how cool is that? </p>
