--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -147,16 +147,16 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
         <!-- Example row of columns -->
        <!-- <div class="row ">
             <div class="col-lg-4 ">-->
-        <img src="http://nebula.wsimg.com/3a77ec7b5b01e4e25fc7135e06cf99f5?AccessKeyId=965BE7797D6AE6E5EAEF&disposition=0&alloworigin=1">        
-        <h2>Custom Shirts</h2>
-                <p>Every so often our PokeCrates will contain custom made Pokémon shirts.  Our awesome shirts are drawn out by a fellow Pokémon fan just like you.  Once we have your shirt size it will be saved on file for your next shirts. Follow us on <a href="http://twitter.com/pokecrate">Twitter</a> and <a href="https://www.facebook.com/PokeCrate">Facebook</a> for contest and more! Winners will have their design featured in one of our shirts! </p>
+        <img src="http://nebula.wsimg.com/3a77ec7b5b01e4e25fc7135e06cf99f5?AccessKeyId=965BE7797D6AE6E5EAEF&disposition=0&alloworigin=1" style="float:left;">        
+        <div id="container1" style="float:left;"><h2>Custom Shirts</h2>
+                <p>Every so often our PokeCrates will contain custom made Pokémon shirts.  Our awesome shirts are drawn out by a fellow Pokémon fan just like you.  Once we have your shirt size it will be saved on file for your next shirts. Follow us on <a href="http://twitter.com/pokecrate">Twitter</a> and <a href="https://www.facebook.com/PokeCrate">Facebook</a> for contest and more! Winners will have their design featured in one of our shirts! </p><br></div>
 
             
             <!--<div class="col-lg-4 ">-->
         
-        <h2>Guaranteed Plush</h2>
+        <div id="container2" style="float:left;"<h2>Guaranteed Plush</h2>
                 <p>One may wonder what will be in our next Pokecrate.. but one thing it will have for sure is a Pokémon plush toy.  We thought you guys would enjoy these because we sure do.  They are perfect for decorating your room, office, car, and many other things.  We have seen people be very creative.  These plushes will range from size and quality, but will all be cute and stuff.  One in every Pokecrate, how cool is that? </p>
-<img src="http://nebula.wsimg.com/9dbbbfcc697f1a632fdfbc5c8d4700a0?AccessKeyId=965BE7797D6AE6E5EAEF&disposition=0&alloworigin=1">
+<img src="http://nebula.wsimg.com/9dbbbfcc697f1a632fdfbc5c8d4700a0?AccessKeyId=965BE7797D6AE6E5EAEF&disposition=0&alloworigin=1" style="float:left;">
         <!-- Site footer -->
         <div class="footer ">
             <p><a href="http://www.stormyjet.com">Stormy</a> made this.
