change img size

--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -155,7 +155,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
             <!--<div class="col-lg-4 ">-->
         
         <h2>Guaranteed Plush</h2>
-                <img src="http://nebula.wsimg.com/9dbbbfcc697f1a632fdfbc5c8d4700a0?AccessKeyId=965BE7797D6AE6E5EAEF&disposition=0&alloworigin=1" style="float:left"><p style="float:right">One may wonder what will be in our next Pokecrate.. but one thing it will have for sure is a Pokémon plush toy.  We thought you guys would enjoy these because we sure do.  They are perfect for decorating your room, office, car, and many other things.  We have seen people be very creative.  These plushes will range from size and quality, but will all be cute and stuff.  One in every Pokecrate, how cool is that? </p>
+                <img src="http://nebula.wsimg.com/9dbbbfcc697f1a632fdfbc5c8d4700a0?AccessKeyId=965BE7797D6AE6E5EAEF&disposition=0&alloworigin=1" height="199" width="163"><p>One may wonder what will be in our next Pokecrate.. but one thing it will have for sure is a Pokémon plush toy.  We thought you guys would enjoy these because we sure do.  They are perfect for decorating your room, office, car, and many other things.  We have seen people be very creative.  These plushes will range from size and quality, but will all be cute and stuff.  One in every Pokecrate, how cool is that? </p>
 
         <!-- Site footer -->
         <div class="footer ">
