--- a/pokecrate/contact.html
+++ b/pokecrate/contact.html
@@ -105,8 +105,8 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
         <div class="jumbotron ">
             <h1>Questions, Comments, even Concerns?</h1>
             <p class="lead ">Here at PokeCrate we care what you think and have to say. Don't hesitate to message us about anything, anything at all.  From saying hello to complaints. we want to hear it all.</p>
-            <p><a class="btn btn-lg btn-info " href="mailto:pokecrate@gmail.com" role="button ">Send us an email</a>
-                <small>Button not working or you use an online mail service? Send it to PokeCrate@gmail.com</small>
+            <p><a class="btn btn-lg btn-info " href="mailto:pokecrate@gmail.com" role="button ">Send us an email</a><br>
+                <p style="size:small">Button not working or you use an online mail service? Send it to PokeCrate@gmail.com</p>
             </p>
         </div>
 </body>
