--- a/pokecrate/contact.html
+++ b/pokecrate/contact.html
@@ -114,20 +114,21 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
         <!-- Example row of columns -->
         <div class="row ">
             <div class="col-lg-4 ">
-                <h2>MasterCrate</h2>
-                <p>Every month subscribers will automatically be entered for a chance to win our MasterCrate.  Chosen at random, someone will win this special crate that will contain... A ORIGINAL BASE SET CHARIZARD! And other cool Pokemon stuff too! Will you be this months winner?</p>
+                <h2>Check out our affiliates!</h2>
+                <p><a href="http://sherlockmooncollectibles.com">SHERLOCKMOON COLLECTIBLES</a></p>
+                
+                </p>
+            </div>
+            <div class="col-lg-4 ">
+      
+                <p>Remember to follow us on Facebook, Twitter, YouTube, and Google+</p>
                 <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
                 </p>
             </div>
             <div class="col-lg-4 ">
-                <h2>Our Crates</h2>
-                <p>Our PokeCrates throughout the months will feature many Pokemon items, some will feature shirts, others out of print booster packs, and even themed decks among other Pokemon items.  One things for sure though, every crate will contain some sort of Pokemon plush. You guys can count on it.</p>
-                <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
-                </p>
-            </div>
-            <div class="col-lg-4 ">
-                <h2>something else</h2>
-                <p>goes here</p>
+                <h2>PokeCrate</h2>
+                <p><a href="mailto:pokecrate@gmail.com">PokeCrate@gmail.com</a><br>
+                And our phone number is +1.7143633257</p>
                 <p><a class="btn btn-primary " href="topsecret.html" role="button ">and then a link to somewhere... &raquo;</a>
                 </p>
             </div>
