--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -112,6 +112,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
     <foot>
         <!-- Example row of columns -->
         <div class="row ">
+            <center>
             <div class="col-lg-4 ">
                 <h2>MasterCrate</h2>
                 <p>Every month subscribers will automatically be entered for a chance to win our MasterCrate.  Chosen at random, someone will win this special crate that will contain... A ORIGINAL BASE SET CHARIZARD! And other cool Pokemon stuff too! Will you be this months winner?</p>
@@ -124,12 +125,13 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
                 <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
                 </p>
             </div>
-            <div class="col-lg-4 ">
+                </center>
+            <!--<div class="col-lg-4 ">
                 <h2>something else</h2>
                 <p>goes here</p>
                 <p><a class="btn btn-primary " href="topsecret.html" role="button ">and then a link to somewhere... &raquo;</a>
                 </p>
-            </div>
+            </div>-->
         </div>
 
         <!-- Site footer -->
