MY FINGERS ARE MAKING WORDS

--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -111,7 +111,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 </body>
     <foot>
         <!-- Example row of columns -->
-        <div class="row ">
+        <!--<div class="row ">-->
             <center>
             <div class="col-lg-4 ">
                 <h2>MasterCrate</h2>
@@ -131,8 +131,8 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
                 <p>goes here</p>
                 <p><a class="btn btn-primary " href="topsecret.html" role="button ">and then a link to somewhere... &raquo;</a>
                 </p>
-            </div>-->
-        </div>
+            </div>
+        </div>-->
 
         <!-- Site footer -->
         <div class="footer ">
