--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -105,34 +105,31 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
         <div class="jumbotron ">
             <h1>Welcome PokeFans!</h1>
             <p class="lead ">Do you love Pokémon as much as we do? Subscribe today and start receiving stuff you cannot find anywhere else.  We are currently working with some vary talented artist to bring you exclusive Pokémon shirts just available here at PokeCrate.  We are working hard every day to bring you ALL POKEMON ITEMS, ALL THE TIME.  Follow us on <a href="https://twitter.com/pokecrate">Twitter</a>, <a href="https://www.facebook.com/PokeCrate">Facebook</a>, Google+ and even <a href="https://www.youtube.com/channel/UC8AcgrP-FyF1QRFGGbLgJWQ">YouTube</a> for updates, news, new products, even special events and GIVEAWAYS.  We are bringing Pokémon tournaments and special events to PokeCrate. Don't delay! Your PokeCrate awaits you.</p>
-            <p><a class="btn btn-lg btn-info " href="subscribe.html" role="button ">Get yours today!</a>
+
             </p>
         </div>
 </body>
     <foot>
         <!-- Example row of columns -->
-        <!--<div class="row ">-->
-            <center>
+        <div class="row ">
             <div class="col-lg-4 ">
                 <h2>MasterCrate</h2>
                 <p>Every month subscribers will automatically be entered for a chance to win our MasterCrate.  Chosen at random, someone will win this special crate that will contain... A ORIGINAL BASE SET CHARIZARD! And other cool Pokemon stuff too! Will you be this months winner?</p>
-                <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
+
                 </p>
             </div>
             <div class="col-lg-4 ">
-                <h2>Our Crates</h2>
+                <h2>Subscribe to PokeCrate today!</h2>
+<p><a class="btn btn-lg btn-info " href="subscribe.html" role="button ">Subscribe now!</a>
+
+            </div>
+            <div class="col-lg-4 ">
+                h2>Our Crates</h2>
                 <p>Our PokeCrates throughout the months will feature many Pokemon items, some will feature shirts, others out of print booster packs, and even themed decks among other Pokemon items.  One things for sure though, every crate will contain some sort of Pokemon plush. You guys can count on it.</p>
-                <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
+
                 </p>
             </div>
-                </center>
-            <!--<div class="col-lg-4 ">
-                <h2>something else</h2>
-                <p>goes here</p>
-                <p><a class="btn btn-primary " href="topsecret.html" role="button ">and then a link to somewhere... &raquo;</a>
-                </p>
-            </div>
-        </div>-->
+        </div>
 
         <!-- Site footer -->
         <div class="footer ">
