center that button

--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -119,8 +119,8 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
                 </p>
             </div>
             <div class="col-lg-4 ">
-                <h2>Subscribe to PokeCrate today!</h2>
-<p><a class="btn btn-lg btn-info " href="subscribe.html" role="button ">Subscribe now!</a>
+                <h2>Get your Pokecrate</h2>
+<center><p><a class="btn btn-lg btn-info " href="subscribe.html" role="button ">Subscribe now!</a></center>
 
             </div>
             <div class="col-lg-4 ">
