make the footer more clear

--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -169,10 +169,9 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 
         <!-- Site footer -->
         <div class="footer ">
-            <p><a href="http://www.stormyjet.com">Stormy</a> made this.
+            <p><a href="http://www.stormyjet.com">Stormy</a> made this site. I'm not PokeCrate!
             </p>
         </div>
-
 </div>
 <!-- /container -->
 
