--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -119,7 +119,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
                 </p>
             </div>
             <div class="col-lg-4 ">
-                <h2>Get your Pokecrate</h2>
+                <center><h2>Get your Pokecrate</h2></center>
 <center><p><a class="btn btn-lg btn-info " href="subscribe.html" role="button ">Subscribe now!</a></center>
 
             </div>
