OKAY I AM DONE FRIENDS

--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -124,7 +124,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 
             </div>
             <div class="col-lg-4 ">
-                h2>Our Crates</h2>
+                <h2>Our Crates</h2>
                 <p>Our PokeCrates throughout the months will feature many Pokemon items, some will feature shirts, others out of print booster packs, and even themed decks among other Pokemon items.  One things for sure though, every crate will contain some sort of Pokemon plush. You guys can count on it.</p>
 
                 </p>
