--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <div class="alert alert-success">
             <p style="font-size:22px"><strong>Wonderful!</strong> You have read this important alert</p>
         </div>-->
-        <div class="alert alert-danger">
+        <!--<div class="alert alert-info">
 
             <p style="font-size:22px;">
-                <strong>Attention!</strong> We're under some heavy load. Things may be slow! Sorry :(</p>
-        </div>
+                <strong>Attention!</strong> info</p>
+        </div>-->
         <!--<div class="alert alert-warning">
             <p style="font-size:22px"><strong>warning text in bold</strong>warning text</p>
         </div>
