--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
 
-    <title>Cancer Check</title>
+    <title>Wait...</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
         <br><br><br>
-<h1 style="size:55PT">This page is gone :(</h1>
+<h1 style="size:75pt">This page is gone :(</h1>
                 <h2>Hey, I'm moving my blogging system so I dont have to edit the HTML everytime. The blog is temp down. Sorry :/</h2>
 
 
