--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -4,6 +4,16 @@
 I'm stormyjet and I make things like this sometimes. You may use this code for free on one condition, I get some credit. I added it discreetly at the bottom. Have fun. -->
 
 <head>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-31660701-1', 'stormyjet.com');
+  ga('send', 'pageview');
+
+</script>
     <link rel="shortcut icon" href="/img/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-touch-icon-114x114.png">
