--- a/blog.html
+++ b/blog.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <div align="center" style="vertical-align:middle;">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-    <meta name="msapplication-TileColor" content="#b91d47">
-    <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
-    <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
-    <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
-    <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
-    <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
-    <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
+
+    <head>
+        <meta http-equiv="refresh" content="0;URL='http://stormyswords.tumblr.com'" />
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" href="/img/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
+        <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
+        <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
+        <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+        <meta name="msapplication-TileColor" content="#b91d47">
+        <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
+        <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
+        <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
+        <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
+        <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
+        <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
 
-    <title>Wait...</title>
+        <title>Wait...</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
 
-    <link href="css/cover.css" rel="stylesheet">
+        <link href="css/cover.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
- 
-</head>
+        <!-- Just for debugging purposes. Don't actually copy this line! -->
 
-<body>
+    </head>
 
-    <div class="site-wrapper">
+    <body>
 
-        <div class="site-wrapper-inner">
+        <div class="site-wrapper">
 
-            <div class="cover-container">
+            <div class="site-wrapper-inner">
 
-                <div class="masthead clearfix">
-                    <div class="inner">
-                        <center>
+                <div class="cover-container">
 
-</center>
+                    <div class="masthead clearfix">
+                        <div class="inner">
+                            <center>
 
+                            </center>
+
+                        </div>
                     </div>
-                </div>
-        <br><br><br>
-<h1 style="size:75pt">This page is gone :(</h1>
-                <h2>Hey, I'm moving my blogging system so I dont have to edit the HTML everytime. The blog is temp down. Sorry :/</h2>
-
+                    <br>
+                    <br>
+                    <br>
+                    <h1 style="size:75pt">This page is gone :(</h1>
+                    <h2>This page was moved to Tumblr. If you are seeing this, something messed up.</h2>
+                    <h2><a href="http://stormyswords.tumblr.com">Please click here to continue...</a></h2>
+                    <h4>Sorry for the issues. :(</h4>
 
 
 
@@ -78,14 +83,15 @@
 
         </div>
 
-    </div>
+</div>
 
-    <!-- Bootstrap core JavaScript
+<!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="../../dist/js/bootstrap.min.js"></script>
+<script src="../../assets/js/docs.min.js"></script>
 </body>
 </div>
+
 </html>
