--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <div align="center" style="vertical-align:middle;">
 
     <head>
-        <meta http-equiv="refresh" content="0;URL='http://stormyswords.tumblr.com'" />
+        
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,7 +44,7 @@
 
     </head>
 
-    <body>
+    <body onload="window.location.replace('http://stormyswords.tumblr.com')">
 
         <div class="site-wrapper">
 
