--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<div align="center" style="vertical-align:middle;">
-
+<html>
     <head>
-        
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,68 +27,22 @@
         <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
         <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
         <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
+        <title>Words by Stormy</title>
+        <style type="text/css">
+            body, html
+            {
+                margin: 0; padding: 0; height: 100%; overflow: hidden;
+            }
 
-
-        <title>Wait...</title>
-
-        <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-
-
-        <link href="css/cover.css" rel="stylesheet">
-
-        <!-- Just for debugging purposes. Don't actually copy this line! -->
-
+            #content
+            {
+                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+            }
+        </style>
     </head>
-
-    <body onload="window.location.replace('http://stormyswords.tumblr.com')">
-
-        <div class="site-wrapper">
-
-            <div class="site-wrapper-inner">
-
-                <div class="cover-container">
-
-                    <div class="masthead clearfix">
-                        <div class="inner">
-                            <center>
-
-                            </center>
-
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-                    <br>
-                    <h1 style="size:75pt">This page is gone :(</h1>
-                    <h2>This page was moved to Tumblr. If you are seeing this, something messed up.</h2>
-                    <h2><a href="http://stormyswords.tumblr.com">Please click here to continue...</a></h2>
-                    <h4>Sorry for the issues. :(</h4>
-
-
-
-                    </p>
-                </div>
-
-                <div class="mastfoot">
-                    <div class="inner">
-
-                    </div>
-                </div>
-
-            </div>
-
+    <body>
+        <div id="content">
+            <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
         </div>
-
-</div>
-
-<!-- Bootstrap core JavaScript
-    ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="../../dist/js/bootstrap.min.js"></script>
-<script src="../../assets/js/docs.min.js"></script>
-</body>
-</div>
-
+    </body>
 </html>
