--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,31 @@
                 position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
             }
         </style>
+        <link href="http://stormyjet.com/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://stormyjet.comcss/justified-nav.css" rel="stylesheet">
+    <div class="container ">
+        <div class="masthead ">
+            <center>
+                <h3 class="text-muted "><a href="http://stormyjet.com/topsecret.html ">Words by Stormy</a></h3>
+            
+            <ul class="nav nav-justified ">
+
+                <li><a href="http://stormyjet.com">Home</a>
+                </li>
+                <li class="active"><a href="#">Blog</a>
+                </li>
+                <li><a href="http://twitter.com/stormyjet ">Twitter</a>
+                </li>
+                <!-- This line to be replaced with proper source-->
+                <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Source</a>
+                </li>
+                <li><a href="http://meteorgame.github.io ">Meteor Game</a>
+                </li>
+<li><a href="http://mcfs.github.io ">MCFS</a>
+                </li>
+
+            </ul>
+        </div>
     </head>
     <body>
         <div id="content">
