--- a/blog.html
+++ b/blog.html
@@ -1,73 +1,82 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="shortcut icon" href="/img/favicon.ico">
-        <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
-        <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
-        <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
-        <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-        <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-        <meta name="msapplication-TileColor" content="#b91d47">
-        <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
-        <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
-        <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
-        <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
-        <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
-        <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
-        <title>Words by Stormy</title>
-        <style type="text/css">
-            body, html
-            {
-                margin: 5; padding: 0; height: 75%; overflow: hidden;
-            }
 
-            #content
-            {
-                position:absolute; left: 0; right: 0; bottom: 0; top: 125px; 
-            }
-        </style>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
+    <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
+    <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
+    <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
+    <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
+    <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
+    <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
+    <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
+    <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
+    <title>Words by Stormy</title>
         <link href="http://stormyjet.com/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://stormyjet.comcss/justified-nav.css" rel="stylesheet">
-    <div class="container ">
-        <div class="masthead ">
+    <style type="text/css">
+        body,
+        html {
+            margin: 5;
+            padding: 0;
+            height: 75%;
+            overflow: hidden;
+        }
+        #content {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 125px;
+        }
+    </style>
+
+    <div class="container">
+        <div class="masthead">
             <center>
                 <h3 class="text-muted "><a href="http://stormyjet.com/topsecret.html ">Words by Stormy</a></h3>
-            
-            <ul class="nav nav-justified ">
 
-                <li><a href="http://stormyjet.com">Home</a>
-                </li>
-                <li class="active"><a href="#">Blog</a>
-                </li>
-                <li><a href="http://twitter.com/stormyjet ">Twitter</a>
-                </li>
-                <!-- This line to be replaced with proper source-->
-                <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Source</a>
-                </li>
-                <li><a href="http://meteorgame.github.io ">Meteor Game</a>
-                </li>
-<li><a href="http://mcfs.github.io ">MCFS</a>
-                </li>
+                <ul class="nav nav-justified ">
 
-            </ul>
+                    <li><a href="http://stormyjet.com">Home</a>
+                    </li>
+                    <li class="active"><a href="#">Blog</a>
+                    </li>
+                    <li><a href="http://twitter.com/stormyjet ">Twitter</a>
+                    </li>
+                    <!-- This line to be replaced with proper source-->
+                    <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Source</a>
+                    </li>
+                    <li><a href="http://meteorgame.github.io ">Meteor Game</a>
+                    </li>
+                    <li><a href="http://mcfs.github.io ">MCFS</a>
+                    </li>
+
+                </ul>
         </div>
-    </head>
-    <body>
-        <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
-        </div>
-    </body>
+</head>
+
+<body>
+    <div id="content">
+        <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
+    </div>
+</body>
+
 </html>
