--- a/blog.html
+++ b/blog.html
@@ -48,32 +48,35 @@
         }
     </style>
 
-    <div class="container">
-        <div class="masthead">
-            <center>
-                <h3 class="text-muted "><a href="http://stormyjet.com/topsecret.html ">Words by Stormy</a></h3>
-
-                <ul class="nav nav-justified ">
-
-                    <li><a href="http://stormyjet.com">Home</a>
-                    </li>
-                    <li class="active"><a href="#">Blog</a>
-                    </li>
-                    <li><a href="http://twitter.com/stormyjet ">Twitter</a>
-                    </li>
-                    <!-- This line to be replaced with proper source-->
-                    <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Source</a>
-                    </li>
-                    <li><a href="http://meteorgame.github.io ">Meteor Game</a>
-                    </li>
-                    <li><a href="http://mcfs.github.io ">MCFS</a>
-                    </li>
-
-                </ul>
-        </div>
 </head>
 
 <body>
+    
+       <div class="container ">
+
+        <div class="masthead ">
+            <center>
+                <h3 class="text-muted "><a href="topsecret.html ">Stormy's Website</a></h3>
+            </center>
+            <ul class="nav nav-justified ">
+
+                <li><a href="index.html">Home</a>
+                </li>
+                <li class="active "><a href="# ">Blog</a>
+                </li>
+                <li><a href="http://twitter.com/stormyjet ">Twitter</a>
+                </li>
+                <!-- This line to be replaced with proper source-->
+                <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Source</a>
+                </li>
+                <li><a href="http://meteorgame.github.io ">Meteor Game</a>
+                </li>
+                <li><a href="http://mcfs.github.io ">MCFS</a>
+                </li>
+
+
+            </ul>
+        </div>
     <div id="content">
         <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
     </div>
