--- a/blog.html
+++ b/blog.html
@@ -29,8 +29,8 @@
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
     <title>Words by Stormy</title>
-        <link href="http://stormyjet.com/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://stormyjet.comcss/justified-nav.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/justified-nav.css" rel="stylesheet">
     <style type="text/css">
         body,
         html {
@@ -56,7 +56,7 @@
 
         <div class="masthead ">
             <center>
-                <h3 class="text-muted "><a href="topsecret.html ">Stormy's Website</a></h3>
+                <h3 class="text-muted "><a href="topsecret.html ">Words by Stormy</a></h3>
             </center>
             <ul class="nav nav-justified ">
 
