--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div>
         </center>
     </noscript>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container ">
 
         <div class="masthead ">
