--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
             </ul>
         </div>
+        </nav>
         <!--<li class="active "><a href="# ">Test</a></li>
           <li><a href="http://twitter.com/stormyjet ">Twitter</a></li>
           
