--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ request.send();
 </script>
 
         <div class="jumbotron ">
-            <h1>StormyJet.com</h1>
+            <h1>StormyJet</h1>
             <div id="candy" class="lead">I can't load any candy text! Or maybe I am right now?</div>
             
             </p>
