--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ request.send();
 </script>
 
         <div class="jumbotron ">
-            <h1>StormyJet</h1>
+            <p style="font-size: 500%;">Stormy's Website</p>
             <div id="candy" class="lead">I can't load any candy text! Or maybe I am right now?</div>
             
             </p>
