--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <div class="masthead ">
             <center>
-                <h3 class="text-muted "><a href="topsecret.html ">Stormy's Website</a></h3>
+                <h3 class="text-muted "><a href="topsecret.html "> </a></h3>
             </center>
             <ul class="nav nav-justified ">
 
@@ -156,7 +156,7 @@ request.send();
 
         <div class="jumbotron ">
             <p style="font-size: 500%;">Stormy's Website</p>
-            <div id="candy" class="lead">I can't load any candy text! Or maybe I am right now?</div>
+            <div id="candy" style="font-size: 200%;">I can't load any candy text! Or maybe I am right now?</div>
             
             </p>
         </div>
