--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@ request.send();
         <div class="jumbotron ">
             <p style="font-size: 500%;">Stormy's Website</p>
             <div id="candy" style="font-size: 200%;">I can't load any Candy! Or maybe I am right now?</div><br><br><hr>
-            <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made<br>
+            <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.<br>
                 <a href="cancer.html">The free online cancer checker</a><br>
-                <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
+                <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a><br>
+                If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
             </p>
         </div>
 <hr>
