--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>-->
     </center>
     <noscript><div class="alert alert-info">
-        <h2>Candies Disabled.</h2><h3>To reenable, turn on javascript for this website.</h3>
+        <h2><strong>Candies are Disabled.</strong></h2><h3>To reenable, turn on javascript for this website.</h3>
     </div></noscript>
     
     <div class="container ">
@@ -155,7 +155,7 @@ request.send();
 
         <div class="jumbotron ">
             <p style="font-size: 500%;">Stormy's Website</p>
-            <div id="candy" style="font-size: 200%;">I can't load any Candies! This site just got boring :/</div><br><br><hr>
+            <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div><br><br><hr>
             <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.<br>
                 <a href="cancer.html">The free online cancer checker</a><br>
                 <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a><br>
