--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             <p style="font-size:22px"><strong>Uh-Oh.</strong> Looks like something bad happened, fix it?</p>
         </div>-->
     </center>
-    <noscript><div class="alert alert-info">
+    <noscript><div class="alert alert-info"><center>
         <h2><strong>Candies are Disabled.</strong></h2><h3>To reenable, turn on javascript for this website.</h3>
-    </div></noscript>
+    </center></div></noscript>
     
     <div class="container ">
 
