some minor fixes

--- a/n3fs.html
+++ b/n3fs.html
@@ -65,8 +65,9 @@
 </script>
     <![endif]-->
 </head>
-Hey so resignations<br>
+
     <body>
+        <p class="lead">
     <strong>Jaxon:</strong><br>
     Hi, guys. I’m the one you hated. Ok so this is why i quit. I do not like the consolidation of power within a small group of people. When a small group of people gain a large amount of power, this is the consolidation of power. A small group of staff have been able to do this. They have become friends, and can/have used their power to alienate users, and can use their power to take moderation action against other users. This bothers me, and was one of the major reasons I personally quit. I also quit because being hated isnt always fun. On one hand, you can go about destroying things, without a care in the world, on the other, people hate you. The insults and exclusion will build up, and it will take its toll. The final reason is that the staff friend group was mean to my friends. THIS GOT ME A BIT PISSED (can you tell). One of my friends specifically, donated a ridiculous amount of money to the server, and you know the staff groups response? They harrased him. I regret to say that i participated in this. And that brings me to another point. Because these users are staff, other users follow them in their actions, and therefore assume that their actions are always right, including harrasment of users. This is ridiculous. I’m done. Thanks for the social life.<br>
         <strong>SirPetsmart:</strong><br>
@@ -86,6 +87,7 @@ I wanted to be a staff member on the N3FS cause it WAS the best community server
 
 <strong><em>#inb4ban</em></strong>
         <br>
-        
+        </p>
     </body>
+    <foot>Bye N3FS. It's been fun.</foot>
 </html>
