--- a/n3fs.html
+++ b/n3fs.html
@@ -68,6 +68,7 @@
 
     <body>
         <p class="lead">
+            The following people have let the server: petsmart50, tee625, jaxon000, PsichoLogique, Mlgsupergamer, Stormy, and zapster109. We have all left for seperate reasons, but similar reasons. Here is everyone’s name listed here’s statements. Note: These were made seperately and the opinions reflect the users, not the whole group.<br>
     <strong>Jaxon:</strong><br>
     Hi, guys. I’m the one you hated. Ok so this is why i quit. I do not like the consolidation of power within a small group of people. When a small group of people gain a large amount of power, this is the consolidation of power. A small group of staff have been able to do this. They have become friends, and can/have used their power to alienate users, and can use their power to take moderation action against other users. This bothers me, and was one of the major reasons I personally quit. I also quit because being hated isnt always fun. On one hand, you can go about destroying things, without a care in the world, on the other, people hate you. The insults and exclusion will build up, and it will take its toll. The final reason is that the staff friend group was mean to my friends. THIS GOT ME A BIT PISSED (can you tell). One of my friends specifically, donated a ridiculous amount of money to the server, and you know the staff groups response? They harrased him. I regret to say that i participated in this. And that brings me to another point. Because these users are staff, other users follow them in their actions, and therefore assume that their actions are always right, including harrasment of users. This is ridiculous. I’m done. Thanks for the social life.<br>
         <strong>SirPetsmart:</strong><br>
@@ -86,7 +87,19 @@ I wanted to be a staff member on the N3FS cause it WAS the best community server
         Hey N3FS community. I’m out. Peace. I’m leaving because the admins have their own little group of friends, and promote anyone who is their friend to as high they can be. I was promoted at the same time as Anne, and I consistently stayed a moderator without any promotions. I have gotten no good answer. Also, if you wanna make your own server and be a mod on N3FS, your SOL my friend, I was BANNED for making one. Goodbye to Nubble, probably the best mod that N3FS has, and Loki, a pretty cool guy. Rory was pretty cool too, and Ninja was consisntently rude but was kinda nice so bye to you too, Izzy like dissapeared but tell her i say bye. kthxbai everyones.
 
 <strong><em>#inb4ban</em></strong>
+            
         <br>
+            <strong>Tee:</strong><br>
+I quit, bitches. I loved you all, but I quit.<br>
+            <strong>mlgsupergamer</strong><br>
+            This is where MLG's would go, IF I HAD IT!<br>
+            <strong>Psicho:</strong><br>
+            First of all, the whole staff group: they have way too much influance over the server and most of them should be fired because they are being asses to the community. If they don't like you, they will straight up ignore you and leave you to rot. In certain situation they won't hesitate to abuse their power. (i.e three months ago, when they used world edit to destroy our base).
+Which brings me to the Uncleleech situation, we still don't have any closure on that. His punition was minimal if even there, which suggest a severe lack of leadership. He should have been fired.
+There is also Kosky. He clearly didn't deserve to be moderator. The only reason why he did is because he gave members of the staff group power in the donator world.<br>
+            <strong>Zapster</strong><br>
+            Zapster109 is leaving the server because there are too many twats to make it worthwhile.<br>
+            
         </p>
     </body>
     <foot>Bye N3FS. It's been fun.</foot>
