--- a/n3fs.html
+++ b/n3fs.html
@@ -83,7 +83,7 @@ Third reason I left was due to a situation that happened early in my time on the
 I wanted to be a staff member on the N3FS cause it WAS the best community servers out there.   But sadly the server was plagued with moral, economic, social, and technical issues.  And with no fix on the horizon, I left the server with no resistance.  And if I had the time I would alert the real Nerd3 to pull his name from the server.  All the servers baring the Nerd3 name, gives a bad image to a man who has NO say (as we understand) to the actions of the servers.
 
 ~Sgt. William "SirPetsmart"<br>
-        <strong>Stormy (thats me!):</strong><br>
+        <strong>Stormy:</strong><br>
         Hey N3FS community. I’m out. Peace. I’m leaving because the admins have their own little group of friends, and promote anyone who is their friend to as high they can be. I was promoted at the same time as Anne, and I consistently stayed a moderator without any promotions. I have gotten no good answer. Also, if you wanna make your own server and be a mod on N3FS, your SOL my friend, I was BANNED for making one. Goodbye to Nubble, probably the best mod that N3FS has, and Loki, a pretty cool guy. Rory was pretty cool too, and Ninja was consisntently rude but was kinda nice so bye to you too, Izzy like dissapeared but tell her i say bye. kthxbai everyones.<br>
 
 <strong><em>#inb4ban</em></strong>
@@ -99,6 +99,8 @@ Which brings me to the Uncleleech situation, we still don't have any closure on 
 There is also Kosky. He clearly didn't deserve to be moderator. The only reason why he did is because he gave members of the staff group power in the donator world.<br>
             <strong>Zapster:</strong><br>
             Zapster109 is leaving the server because there are too many twats to make it worthwhile.<br>
+            <strong>Jace:</strong><br>
+            This was unarguably clear on the new Donators world.  The first set of government officials in the Donators world was almost entirely staff in the main staff oligarchy.  And the same the second time, albeit with Kosky.  And now the third set is the same damn people - they’ve just shuffled around.  It couldn’t be clearer that the staff here are doing nothing but sucking each other’s dicks to make each other feel good.<br>
             
         </center></p>
     </body>
