--- a/n3fs.html
+++ b/n3fs.html
@@ -75,16 +75,16 @@
         Why I Left N3FS....
 
 I left the server & my position as Moderator due to a couple of reasons.  First off I left due to the disconnect between Admins and Moderators.   The Admins created a so called "Staff Friend Group" that only included members the Admins WANTED to be friends with.  And in the process they wanted to keep there group with only "elite" members.  
-
+<br>
 Second reason I left was for a far more personal reason.  I personally did not like the methods and actions our staff group conducted in the months I was there.  I will not go into detail as I would have to call & point fingers at certain users, and I will not do that.  And I realize I could have gone to "higher" staff member, but I could not trust the "higher" staff members due to "Staff Friend Group".  
-
+<br>
 Third reason I left was due to a situation that happened early in my time on the server.  I was ridiculed about my past, and I lost my cool as anyone else would.  And it was handled in the worst way possible.  And as you can tell I am still bitter about it.
-
+<br>
 I wanted to be a staff member on the N3FS cause it WAS the best community servers out there.   But sadly the server was plagued with moral, economic, social, and technical issues.  And with no fix on the horizon, I left the server with no resistance.  And if I had the time I would alert the real Nerd3 to pull his name from the server.  All the servers baring the Nerd3 name, gives a bad image to a man who has NO say (as we understand) to the actions of the servers.
-
+<br>
 ~Sgt. William "SirPetsmart"<br>
         <strong>Stormy:</strong><br>
-        Hey N3FS community. I’m out. Peace. I’m leaving because the admins have their own little group of friends, and promote anyone who is their friend to as high they can be. I was promoted at the same time as Anne, and I consistently stayed a moderator without any promotions. I have gotten no good answer. Also, if you wanna make your own server and be a mod on N3FS, your SOL my friend, I was BANNED for making one. Goodbye to Nubble, probably the best mod that N3FS has, and Loki, a pretty cool guy. Rory was pretty cool too, and Ninja was consisntently rude but was kinda nice so bye to you too, Izzy like dissapeared but tell her i say bye. kthxbai everyones.<br>
+        Hey N3FS community. I’m out. Peace. I’m leaving because the admins have their own little group of friends, and promote anyone who is their friend to as high they can be. I was promoted at the same time as Anne, and I consistently stayed a moderator without any promotions. I have gotten no good answer. Also, if you wanna make your own server and be a mod on N3FS, your SOL my friend, I was BANNED for making one. I was demoted because my computer broke, I made a thing in the staff fourms saying this, but I was still demoted, while Izzy can be away for 5 weeks (sorry izzy). I reapplied, but I'm never getting it because we have 2 new mods that I've never even met, and if they came on in the month when I was MIA, this is probably not going to end well.  Goodbye to Nubble, probably the best mod that N3FS has, and Loki, a pretty cool guy. Rory was pretty cool too, and Ninja was consisntently rude but was kinda nice so bye to you too, Izzy like dissapeared but tell her i say bye. kthxbai everyones.<br>
 
 <strong><em>#inb4ban</em></strong>
             
@@ -97,12 +97,15 @@ I quit, bitches. I loved you all, but I quit.<br>
             First of all, the whole staff group: they have way too much influance over the server and most of them should be fired because they are being asses to the community. If they don't like you, they will straight up ignore you and leave you to rot. In certain situation they won't hesitate to abuse their power. (i.e three months ago, when they used world edit to destroy our base).
 Which brings me to the Uncleleech situation, we still don't have any closure on that. His punition was minimal if even there, which suggest a severe lack of leadership. He should have been fired.
 There is also Kosky. He clearly didn't deserve to be moderator. The only reason why he did is because he gave members of the staff group power in the donator world.<br>
-            <strong>Zapster:</strong><br>
-            Zapster109 is leaving the server because there are too many twats to make it worthwhile.<br>
-            <strong>Jace:</strong><br>
-            This was unarguably clear on the new Donators world.  The first set of government officials in the Donators world was almost entirely staff in the main staff oligarchy.  And the same the second time, albeit with Kosky.  And now the third set is the same damn people - they’ve just shuffled around.  It couldn’t be clearer that the staff here are doing nothing but sucking each other’s dicks to make each other feel good.<br>
+
+            <strong>Jace (Zapster):</strong><br>
+            I’ve been on this server for a very long time, since almost the beginning (not that anyone would be able to tell you that - I’ve been pretty much ignored up until about February).  But I’ve always enjoyed this server - the people are generally nice and well-meaning, and the community is awesome.  It is Dan’s, after all.  But once I finally started to make friends here around February, I noticed something.  There were really two friend groups.  There’s the group of players who have been around since the beginning (who I’ve always known, but they’ve never known me until February or so), and there’s the staff.  And that’s a problem.  Because, with a few exceptions, mainly Tee and Petsmart, the staff were an exclusive group.  They helped their friends rise in power.  It was the definition of an Oligarchy.
+<br>
+ This was unarguably clear on the new Donators world.  The first set of government officials in the Donators world was almost entirely staff in the main staff oligarchy.  And the same the second time, albeit with Kosky.  And now the third set is the same damn people - they’ve just shuffled around.  It couldn’t be clearer that the staff here are doing nothing but sucking each other’s dicks to make each other feel good.  And while I’ll miss a lot of things about this server - namely my builds - I won’t miss the circlejerk staff.  There’s a lot to like about the Nerdcubed servers - but the negatives outweigh the positives.
+<br>
+ So yes, I’m leaving.  I am one of the group who have decided we can find a better home for our minecraft playing, one where the playing field is more level.  One where, when they ask for moderator applications, the only people who get accepted are already friends with the other mods.  Thanks for all the fun times, you fornicators of dolphins.<br>
             
         </center></p>
     </body>
-    <foot>Bye N3FS. It's been fun.</foot>
+    <foot><center>Bye N3FS. It's been fun. Thanks for all the fish.</center></foot>
 </html>
